Move subpages to their places

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 </body>
 
 <script>
-	$("#quickrules").load("quickrules.html");
-	$("#roller").load("roller.html");
-	$("#chargen").load("chargen.html");
-	$("#morphs").load("morphs.html");
-	$("#gear").load("gear.html");
-	$("#mods").load("mods.html");
-	$("#services").load("services.html");
+	$("#quickrules").load("pages/quickrules.html");
+	$("#roller").load("pages/roller.html");
+	$("#chargen").load("pages/chargen.html");
+	$("#morphs").load("pages/morphs.html");
+	$("#gear").load("pages/gear.html");
+	$("#mods").load("pages/mods.html");
+	$("#services").load("pages/services.html");
 
 	$.fn.timedDisable = function(time) {
 	    if (time == null) { time = 3000; }
