Update to new data format

--- a/pages/chargen.html
+++ b/pages/chargen.html
@@ -120,12 +120,12 @@
               <div class="description">
                 {{aptemp.description}}
                 <ul>
-                  <li>COG: {{aptemp.aptitudes.COG}}</li>
-                  <li>INT: {{aptemp.aptitudes.INT}}</li>
-                  <li>REF: {{aptemp.aptitudes.REF}}</li>
-                  <li>SAV: {{aptemp.aptitudes.SAV}}</li>
-                  <li>SOM: {{aptemp.aptitudes.SOM}}</li>
-                  <li>WIL: {{aptemp.aptitudes.WIL}}</li>
+                  <li>COG: {{aptemp.aptitudes.cognition}}</li>
+                  <li>INT: {{aptemp.aptitudes.intuition}}</li>
+                  <li>REF: {{aptemp.aptitudes.reflexes}}</li>
+                  <li>SAV: {{aptemp.aptitudes.savvy}}</li>
+                  <li>SOM: {{aptemp.aptitudes.somatics}}</li>
+                  <li>WIL: {{aptemp.aptitudes.willpower}}</li>
                 </ul>
               </div>
             </div>
