Add content-type meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<!-- Primary Meta Tags -->
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>EP2 - Helpers</title>
 
     <!-- Libs -->
