Weapons, Ammo, Armor

--- a/pages/gear.html
+++ b/pages/gear.html
@@ -121,7 +121,11 @@
 		"gear_swarms.json",
 		"gear_vehicles.json",
 		"gear_ware.json",
-		"services.json"
+		"services.json",
+		"weapons_melee.json",
+		"weapons_ranged.json",
+		"weapons_ammo.json",
+		"gear_armor.json"
 	];
 
 	gear_jsons.forEach(function(file){
