Fix sticky menus in tabs
- Fix index.html sticky refresh to only refresh stickys in the activated tab.
- No need to initailize sticky in the page html, we handle that in index.html
- Make sure to refresh sticky when the vertical tabs are selected, as page height might change.

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 	$(function () {
 	    //Tabs
 	    $('.menu .item').tab({
-	    	onVisible: function(){
-	    		//Sticky elements need to find where they are now
-	    		$('.ui.sticky').sticky('refresh');
-	    	}
+	        onVisible: function(tabPath){
+	            //Sticky elements need to find where they are now
+	            $('.ui.sticky', this).sticky('refresh');
+	        }
 	    });
 	});
 
