Add subcategory menu links to gear page.
- Under each gear category tab, add a sub-menu with items for each subcategory.
- Make those subcategory items be links to the associated subcategory table.
  - Have to stop propgation on the click event to stop the higher up tab event from eating it.
- Add a fragment-linkable id to each subcategory table to make it linkable.
- Add click event on gear category tabs to scroll page back to the top

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 			-webkit-transform: scaleX(1);
 			transform: scaleX(1);
 		}
+		/* Hide sub-menus until parent menu item is active. */
+		.item .menu {
+			display: none;
+		}
+		.item.active .menu {
+			display: inherit;
+		}
 	</style>
 </head>
 <body>
