--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.7.7/semantic.css" integrity="sha256-R0iK59NZuc4WqlwHXje+t3E1xLMgNGg/yEorSnXUnQM=" crossorigin="anonymous" />
 	<script src="js/gear_templates.js"></script>
 	<script src="js/components.js"></script>
+	<script src="js/tablesort.js"></script>
 
 	<style>
 		body {
