--- a/static/quickrules.html
+++ b/static/quickrules.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<body>
-
+<div class="ui tab segment active inverted">
     <div class="ui three stacking cards inverted">
         <div class="ui centered card">
             <div class="content">
@@ -267,4 +263,4 @@
             </div>
         </div>
     </div>
-</body>
+</div>
