--- a/static/quickrules.html
+++ b/static/quickrules.html
@@ -1,4 +1,4 @@
-<div class="ui tab segment active inverted">
+<div class="ui segment inverted">
     <div class="ui three stacking cards inverted">
         <div class="ui centered card">
             <div class="content">
