--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 		<div id="global-tabs" class="ui large top secondary inverted stackable pointing menu">
 			<router-link class="item" to="/quickrules">Quick Rules</router-link>
 		    <router-link class="item" to="/roller">Dice Roller</router-link>
+		    <router-link class="item" to="/primer">EP2 Primer</router-link>
 		    <router-link class="item" to="/chargen">Data - Chargen</router-link>
 		    <router-link class="item" to="/morphs">Data - Morphs</router-link>
 		    <router-link class="item" to="/gear">Data - Gear</router-link>
