--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <script>
 	function global_despace(value){
 		value = value.toString();
-		return value.replace(/[^#A-Za-z0-9]/, "_");
+		return value.replace(/[^#A-Za-z0-9]/g, "_");
 	}
 
 	var mainVue = new Vue({
