Add links to githubs

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		</keep-alive>
 		<div style="color:white;text-align:center;">
 			Data and text used on this website is from <a href="https://eclipsephase.com">Eclipse Phase books by Posthuman Studios</a>, licensed <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.<br>
-			The website itself is the same license where possible (libraries are under their own licenses).
+			The website itself is the same license where possible (libraries are under their own licenses). <a href="https://github.com/Arokha/EP2-Data">Data GitHub</a> - <a href="https://github.com/Arokha/ep2-helper">Website GitHub</a>
 		</div>
 	</div>
 </body>
