Fix skill table appearance

--- a/static/chargen.html
+++ b/static/chargen.html
@@ -144,7 +144,7 @@
               <td class="ui single line">{{skill.aptitude}}</td>
               <td class="ui single line">{{skill.type}}</td>
               <td v-html="skill.description"></td>
-              <td class="ui single line">{{skill.specializations | commalist}}</td>
+              <td>{{skill.specializations | commalist}}</td>
             </tr>
           </tbody>
         </table>
