--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 			color: #40D3D3 !important;
 		}
 		.ui.message {
-			background-color: #BBBBBB;
+			color: white;
+			background-color: #99999910;
 		}
 	    .ui.vertical.tabular.menu .active.item {
       		background-color: #3D3E3F;
@@ -125,6 +126,14 @@
 		td:hover .addbutton {
 			display: inline-block !important;
 		}
+		/* For sortable tables to omit some headers */
+		.ui.inverted.sortable.table>thead>tr>th.no-sort {
+			cursor: inherit !important;
+		}
+		.ui.inverted.sortable.table>thead>tr>th.no-sort:hover {
+			background: rgba(0,0,0,0.15) !important;
+			color: inherit !important;
+		}
 	</style>
 </head>
 <body>
@@ -132,11 +141,12 @@
 		<div id="global-tabs" class="ui large top secondary inverted stackable pointing menu">
 			<router-link class="item" to="/quickrules">Quick Rules</router-link>
 		    <router-link class="item" to="/primer">EP2 Primer</router-link>
+		    <router-link class="item" to="/chargen">Chargen Guide</router-link>
 		    <router-link class="item" to="/sheet">Character Sheet</router-link>
-		    <router-link class="item" to="/chargen">Data - Chargen</router-link>
 		    <router-link class="item" to="/morphs">Data - Morphs</router-link>
 		    <router-link class="item" to="/gear">Data - Gear</router-link>
 		    <router-link class="item" to="/traits">Data - Traits</router-link>
+		    <router-link class="item" to="/sleights">Data - Sleights</router-link>
 		</div>
 		<keep-alive>
 			<router-view></router-view>
